@@ -1,18 +1,19 @@
-/*
+/**
  * Copyright 2025 threefish.
- *
+ * <p>
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- *
+ * <p>
  * http://www.apache.org/licenses/LICENSE-2.0
- *
+ * <p>
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 package cn.xjbpm.rule.api;
 
 import cn.xjbpm.rule.common.utils.StringUtils;
@@ -36,7 +37,6 @@ import org.springframework.web.bind.annotation.RestController;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.Objects;
 import java.util.stream.Collectors;
 
 /**
@@ -74,17 +74,23 @@ public class CredentialsManageApi {
 
     @PostMapping("/options")
     public ResultVO<List<OptionsVO>> options(@Validated @RequestBody CredentialsVO.SelectQuery request) {
-        if (StringUtils.isNotBlank(request.getType())) {
-            if (Objects.equals("http", request.getType())) {
-                request.setTypes(Arrays.asList(CredentialsType.basic_auth, CredentialsType.bearer_auth, CredentialsType.header_auth));
-            } else if (Objects.equals("ssh", request.getType())) {
-                request.setTypes(Arrays.asList(CredentialsType.shh_password, CredentialsType.shh_private_key));
-            } else if (Objects.equals("deepseek", request.getType())) {
-                request.setTypes(Arrays.asList(CredentialsType.deepseek));
-            } else if (Objects.equals("volcengine", request.getType())) {
-                request.setTypes(Arrays.asList(CredentialsType.volcengine));
-            }
+        String type = request.getType();
+        if (StringUtils.isNotBlank(type)) {
+            List<CredentialsType> types = switch (type) {
+                case "http" -> Arrays.asList(CredentialsType.basic_auth, CredentialsType.bearer_auth, CredentialsType.header_auth);
+                case "ssh" -> Arrays.asList(CredentialsType.shh_password, CredentialsType.shh_private_key);
+                case "aitext" -> Arrays.asList(CredentialsType.volcengine, CredentialsType.deepseek);
+                case "aiimage" -> Arrays.asList(CredentialsType.volcengine, CredentialsType.gemini);
+                case "aitts" -> List.of(CredentialsType.gemini);
+                default -> request.getTypes();
+            };
+            request.setTypes(types);
         }
         return ResultVO.success(credentialsService.options(request));
+    }
+
+    @PostMapping("/type")
+    public ResultVO<CredentialsType> options(@Validated @RequestBody IDRequestVO request) {
+        return ResultVO.success(credentialsService.type(request.getId()));
     }
 }
